@@ -1,3 +1,9 @@
+2002-05-08  Glynn Foster  <glynn.foster@sun.com>
+
+	* calendar.c, log_repaint.c, logview.c, zoom.c: More
+	HIG Compliance stuff. Fixes #76685 in part. Man, this 
+	code is *so* ugly. Hack after hack after hack. [sigh].
+
 2002-05-07  Samuel Stringham <sams@e-sa.com>
 
 	* zoom.c: (repaint_zoom): Fix repaint on zoom-in box. Fixes	
